# venmo-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  out
src/: api.rs  lib.rs  main.rs  types.rs
src/pages/: error.rs  home.rs  login.rs  me.rs  mod.rs  pay.rs  qr.rs  stories.rs
