[package]
name = "venmo-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
tui-textarea = "0.2.0"
crossterm = "0.25"
reqwest = { version = "0.11", features = ["cookies", "json"] }
sled = "0.34.7"
tokio = { version = "1.28.2", features = ["full"] }
serde = "1.0.163"
regex = "1.8.4"
serde_json = "1.0.96"
qrcode-generator = "4.1.8"
async-trait = "0.1.68"
